--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -30,13 +30,13 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: size1_0_vel1_3_catch0_5_cylinder0_all8_fully_observable_originposdist_valuenorm1
-  # run_name: empty_transfer_cylinder5_manual_realcylinder
-  run_name: train
+  run_name: empty_transfer_realcylinder1to5
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
