--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,9 @@
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/maskvalue1_cylinder0.pt
+prob_curriculum: 0.9
+prob_decay: 1
+
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/maskvalue1_cylinder0.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/empty_transfer_cylinder5_manual_realcylinder/02-27_15-47/wandb/run-20240227_154706-2579zldg/files/checkpoint_5373952.pt
-# model_dir: null
+model_dir: null
 
 # hydra.job.chdir: false
 
@@ -30,8 +33,8 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: size1_0_vel1_3_catch0_5_cylinder0_all8_fully_observable_originposdist_valuenorm1
-  run_name: empty_transfer_realcylinder1to5
-  # run_name: debug
+  # run_name: empty_transfer_realcylinder1
+  run_name: check_debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -42,9 +45,9 @@ wandb:
   tags: 
 
 defaults:
-  # - task: HideAndSeek
+  - task: HideAndSeek
   # - task: HideAndSeek_circle_static
-  - task: HideAndSeek_circle_static_UED
+  # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
