--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -4,7 +4,6 @@ defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
   - /base/env_base@_here_
   - /base/sim_base@_here_
-  - /base/randomization_base@_here_
 
 env:
   num_envs: 2048
@@ -35,7 +34,6 @@ arena_size: 1.0
 v_drone: 1.0
 v_prey: 1.3
 
-fixed_config: False # if True, only eval max_config
 use_collision: 1
 use_speed_penalty: 1
 catch_radius: 0.15
@@ -45,5 +43,5 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  max_active: 1
-  random_active: False
+  max_active: 5
+  random_active: True
