--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,5 @@
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_random0to5_final.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder0.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_random0to5_final.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder0.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -30,13 +30,13 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: size1_0_vel1_3_catch0_5_cylinder0_all8_fully_observable_originposdist_valuenorm1
-  # run_name: debug
-  run_name: DR0to5_eval_1cylinder
+  run_name: debug
+  # run_name: DR0to5_eval_1cylinder
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  mode: online
-  # mode: disabled # set to 'disabled' when debugging locally
+  # mode: online
+  mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
