--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 1000
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -17,14 +17,14 @@ time_encoding: true
 action_transform: rate
 
 # inner cl
-use_inner_cl: 1
+use_inner_cl: 0
 capture_threshold: 0.98
 
 # outer cl
 use_outer_cl: 0
 
 # manual cl
-use_manual_cl: 1
+use_manual_cl: 0
 
 # use rejection sampling validation
 use_validation: 1
@@ -51,4 +51,4 @@ cylinder:
   num: 8
   max_active: 5
   min_active: 0
-  random_active: True # if False, only train max_active
+  random_active: False # if False, only train max_active
