--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,7 +1,7 @@
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_random0to5_final.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/inner_cylinder0to5_validation.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder0.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder1to3.pt
-model_dir: null
+# model_dir: null
 
 # hydra.job.chdir: false
 
@@ -30,7 +30,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: cylinder0to5_fromscratch_catch0_5to0_15_with_validation_cl
+  run_name: cylinder5_validation_check_catch015
   # run_name: debug
   # run_name: cylinder0to5_fromscratch_catch0_5to0_15_wo_validation
   job_type: train
