--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1000
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -51,4 +51,4 @@ cylinder:
   num: 8
   max_active: 5
   min_active: 0
-  random_active: False # if False, only train max_active
+  random_active: True # if False, only train max_active
