--- a/cfg/task/HideAndSeek_circle_static_UED_cl.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_cl.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_static_UED
+name: HideAndSeek_circle_static_UED_cl
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 100
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -19,6 +19,12 @@ action_transform: rate
 # inner cl
 use_inner_cl: 0
 capture_threshold: 0.98
+
+# outer cl
+use_outer_cl: 0
+
+# manual cl
+use_manual_cl: 0
 
 # use rejection sampling validation
 use_validation: 1
@@ -36,7 +42,7 @@ v_prey: 1.3
 
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.2
+catch_radius: 0.15
 collision_radius: 0.01
 use_dynamic: False
 
