--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,5 @@
 model_dir: /home/chenjy/OmniDrones/scripts/outputs/inner_cylinder0to5_validation.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder0.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_15_validation_cl_load/03-07_21-23/wandb/run-20240307_212355-z1zptkff/files/checkpoint_1127350272.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder1to3.pt
 # model_dir: null
 
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: 50
 save_interval: 200
 seed: 0
 
@@ -30,8 +30,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: debug
-  run_name: cylinder0to5_catch0_15_validation_cl_load
+  # run_name: cl_check
+  run_name: cylinder0to5_catch0_25_validation_cl_load
   job_type: train
   entity: chenjy
   project: PredatorPrey
