--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -36,7 +36,7 @@ v_prey: 1.3
 
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.15
+catch_radius: 0.2
 collision_radius: 0.01
 use_dynamic: False
 
@@ -45,4 +45,4 @@ cylinder:
   num: 8
   max_active: 5
   min_active: 0
-  random_active: True # if False, only train max_active
+  random_active: False # if False, only train max_active
