--- a/cfg/task/HideAndSeek_circle_static_UED_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_cl_v2.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 100
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -16,15 +16,8 @@ time_encoding: true
 # action_transform: multidiscrete:4
 action_transform: rate
 
-# inner cl
-use_inner_cl: 0
-capture_threshold: 0.98
-
 # outer cl
-use_outer_cl: 0
-
-# manual cl
-use_manual_cl: 0
+use_outer_cl: 1
 
 # use rejection sampling validation
 use_validation: 1
@@ -42,13 +35,13 @@ v_prey: 1.3
 
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.15
+catch_radius: 0.2
 collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
   size: 0.2
   num: 8
-  max_active: 5
+  max_active: 3
   min_active: 0
-  random_active: True # if False, only train max_active
+  random_active: False # if False, only train max_active
