--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,5 @@
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_validation_catch0_2.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_15_validation_cl_load/03-07_21-23/wandb/run-20240307_212355-z1zptkff/files/checkpoint_1127350272.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/warmup_cylinder1to3.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -12,7 +11,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: 50
 save_interval: 200
 seed: 0
 
@@ -30,9 +29,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: 3_cylinder_line_load
   # run_name: debug
-  # run_name: only_cylinder0_catch0_15_validation_load_catch02
+  run_name: 3_cyinder_random_cl_p01
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -46,7 +44,7 @@ defaults:
   # - task: HideAndSeek
   # - task: HideAndSeek_circle_static
   # - task: HideAndSeek_circle_static_UED
-  # - task: HideAndSeek_circle_static_UED_cl
-  - task: HideAndSeek_circle_eval
+  - task: HideAndSeek_circle_static_UED_cl_v2
+  # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
