--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -11,7 +11,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 50
+eval_interval: -1
 save_interval: 200
 seed: 0
 
@@ -30,7 +30,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: 3_cyinder_random_cl_p01
+  run_name: 3_cyinder_random_cl_v3_uniform07_hard03
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -44,7 +44,8 @@ defaults:
   # - task: HideAndSeek
   # - task: HideAndSeek_circle_static
   # - task: HideAndSeek_circle_static_UED
-  - task: HideAndSeek_circle_static_UED_cl_v2
+  # - task: HideAndSeek_circle_static_UED_cl_v2
+  - task: HideAndSeek_circle_static_UED_cl_v3
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
