--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,5 @@
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_v2.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -11,7 +11,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 200
 seed: 0
 
@@ -29,8 +29,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: debug
-  run_name: 3_cyinder_random_cl_v3_uniform07_hard03
+  run_name: cl_v2_3_cylinder_random
+  # run_name: 3_cyinder_random_cl_v3_uniform07_hard03
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -45,7 +45,7 @@ defaults:
   # - task: HideAndSeek_circle_static
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_static_UED_cl_v2
-  - task: HideAndSeek_circle_static_UED_cl_v3
-  # - task: HideAndSeek_circle_eval
+  # - task: HideAndSeek_circle_static_UED_cl_v3
+  - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
