--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -43,6 +43,6 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  max_active: 2
+  max_active: 3
   min_active: 0
-  random_active: False # if False, only train max_active
+  random_active: True # if False, only train max_active
