--- a/cfg/task/HideAndSeek_circle_static_UED_debug.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_debug.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_static_UED_cl_v3
+name: HideAndSeek_circle_static_UED_debug
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -16,8 +16,9 @@ time_encoding: true
 # action_transform: multidiscrete:4
 action_transform: rate
 
-# outer cl
-use_outer_cl: 1
+# inner cl
+use_inner_cl: 0
+capture_threshold: 0.98
 
 # use rejection sampling validation
 use_validation: 1
@@ -35,13 +36,13 @@ v_prey: 1.3
 
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.2
+catch_radius: 0.15
 collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
   size: 0.2
   num: 8
-  max_active: 3
+  max_active: 5
   min_active: 0
   random_active: False # if False, only train max_active
