--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -29,13 +29,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: debug
+  run_name: virtual_cylinder_debug
   # run_name: 3_cyinder_random_cl_v3_uniform07_hard03
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
@@ -44,8 +44,8 @@ defaults:
   # - task: HideAndSeek
   # - task: HideAndSeek_circle_static
   # - task: HideAndSeek_circle_static_UED
-  - task: HideAndSeek_circle_static_UED_cl_v2
-  # - task: HideAndSeek_circle_static_UED_cl_v3
+  # - task: HideAndSeek_circle_static_UED_cl_v2
+  - task: HideAndSeek_circle_static_UED_debug
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
