--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,4 +1,4 @@
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/virtual_cylinder_0to5_catch0_15.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to3_catch0_15.pt
 # model_dir: null
 
@@ -11,26 +11,26 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 200
 seed: 0
 
 viewer:
   resolution: [960, 720]
-  # up
-  eye: [0.001, 0.0, 6.]
-  lookat: [0., 0., 2.]
+  # # up
+  # eye: [0.001, 0.0, 6.]
+  # lookat: [0., 0., 2.]
   # # debug
   # eye: [0., -4., 4.]
   # lookat: [0., 0., 1.]
-  # # front
-  # eye: [8., 0., 8.]
-  # lookat: [0., 0., 1.]
+  # front
+  eye: [8., 0., 8.]
+  lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: virtual_cylinder_debug
-  # run_name: 3_cyinder_random_cl_v3_uniform07_hard03
+  # run_name: virtual_cylinder_0to5_random_catch0_15_loadcatch0_2
+  run_name: 5_cross_catch0_15
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -45,7 +45,7 @@ defaults:
   # - task: HideAndSeek_circle_static
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_static_UED_cl_v2
-  - task: HideAndSeek_circle_static_UED_debug
-  # - task: HideAndSeek_circle_eval
+  # - task: HideAndSeek_circle_static_UED_debug
+  - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
