--- a/cfg/task/HideAndSeek_circle_eval.yaml
+++ b/cfg/task/HideAndSeek_circle_eval.yaml
@@ -18,7 +18,7 @@ time_encoding: true
 action_transform: rate
 
 # evalution scenario
-evaluation_flag: '7_c_1' # '3_cylineder_line', '5_cross', '6_cross', '7_c_1', '8_random'
+evaluation_flag: '3_cylineder_line' # '3_cylineder_line', '5_cross', '6_cross', '7_c_1', '8_random'
 
 use_validation: 1
 
@@ -40,6 +40,6 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  max_active: 7
+  max_active: 3
   min_active: 0
   random_active: False # if False, only train max_active
