--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,5 @@
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/virtual_cylinder_0to5_catch0_15.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to3_catch0_15.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/virtual_cylinder_0to5_catch0_15.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -11,7 +11,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: 50
 save_interval: 200
 seed: 0
 
@@ -30,7 +30,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: virtual_cylinder_0to5_random_catch0_15_loadcatch0_2
-  run_name: 7_c_1_catch0_15
+  run_name: virtual_cylinder_0to5_catch0_15_cl_generate_env_loadcatch0_2
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -43,10 +43,10 @@ wandb:
 
 defaults:
   # - task: HideAndSeek
-  # - task: HideAndSeek_circle_static
+  - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED_debug
-  - task: HideAndSeek_circle_eval
+  # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
