--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,5 +1,6 @@
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/virtual_cylinder_0to5_catch0_15.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_catch0_15_collision001_validation.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cylinder0to5_catch0_2.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -17,20 +18,20 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  # up
-  eye: [0.001, 0.0, 6.]
-  lookat: [0., 0., 2.]
+  # # up
+  # eye: [0.001, 0.0, 6.]
+  # lookat: [0., 0., 2.]
   # # debug
   # eye: [0., -4., 4.]
   # lookat: [0., 0., 1.]
-  # # front
-  # eye: [8., 0., 8.]
-  # lookat: [0., 0., 1.]
+  # front
+  eye: [4., 0., 4.]
+  lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: virtual_cylinder_0to5_random_catch0_15_loadcatch0_2
-  run_name: cylinder0to5_catch0_15_collision001_cl_generate_env_loadcatch0_2
+  run_name: CL_validation_cylinder0to3_catch0_15_v1_4_load_v1_3
+  # run_name: cylinder5_catch0_15_validation_loadcylinder0to5
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -45,7 +46,6 @@ defaults:
   # - task: HideAndSeek
   - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED
-  # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
