--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 50
+eval_interval: -1
 save_interval: 200
 seed: 0
 
@@ -30,21 +30,21 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: CL_validation_cylinder0to3_catch0_15_v1_4_load_v1_3
-  # run_name: cylinder5_catch0_15_validation_loadcylinder0to5
-  # run_name: debug
+  # run_name: CL_v2_validation_cylinder0to5_catch0_15_v1_4_load_v1_3
+  run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  mode: online
-  # mode: disabled # set to 'disabled' when debugging locally
+  # mode: online
+  mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
   # - task: HideAndSeek
-  - task: HideAndSeek_circle_static_UED_cl
+  # - task: HideAndSeek_circle_static_UED_cl
+  - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_eval
   - algo: mappo
