--- a/cfg/task/HideAndSeek_circle_static_UED_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_cl_v2.yaml
@@ -18,6 +18,7 @@ action_transform: rate
 
 # outer cl
 use_outer_cl: 1
+threshold: 0.0
 
 # use rejection sampling validation
 use_validation: 1
@@ -31,7 +32,7 @@ detect_range: -1.0 # -1.0 means fully-observable
 
 arena_size: 1.0
 v_drone: 1.0
-v_prey: 1.4
+v_prey: 1.5
 
 use_collision: 1
 use_speed_penalty: 1
