--- a/cfg/task/HideAndSeek_circle_static_UED_addeasy.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_addeasy.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_static_UED
+name: HideAndSeek_circle_static_UED_addeasy
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -43,6 +43,7 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  max_active: 5
+  max_active: 1
   min_active: 0
   random_active: True # if False, only train max_active
+  prob_easy: 0.05
