--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_catch0_15_collision001_validation.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/CL_v2_omega0_5_validation_cylinder0to5_catch0_15_v1_4_load_v1_3/03-14_21-31/wandb/run-20240314_213120-wr49lk1f/files/checkpoint_1179779072.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/manual_cl_train0to2_loadcl/03-16_13-54/wandb/run-20240316_135421-r9k766ne/files/checkpoint_131203072.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -12,8 +12,8 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
-save_interval: 20
+eval_interval: 200
+save_interval: 200
 seed: 0
 
 viewer:
@@ -30,8 +30,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: omega0_0_load_checktasks_v_1_5_5000
-  # run_name: debug
+  run_name: manual_cl_eval200_easyprob_0_0_5
+  # run_name: check_debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -42,9 +42,9 @@ wandb:
   tags: 
 
 defaults:
-  # - task: HideAndSeek
-  # - task: HideAndSeek_circle_static_UED_cl
-  - task: HideAndSeek_circle_static_UED_cl_v2
+  # - task: HideAndSeek_circle_static_UED_addeasy
+  - task: HideAndSeek_circle_static_UED_cl
+  # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_eval
   - algo: mappo
