update add easy

--- a/cfg/task/HideAndSeek_circle_static_UED_addeasy.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_addeasy.yaml
@@ -20,6 +20,9 @@ action_transform: rate
 use_inner_cl: 0
 capture_threshold: 0.98
 
+# manual cl
+use_manual_cl: 1
+
 # use rejection sampling validation
 use_validation: 1
 
@@ -43,7 +46,8 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  max_active: 1
+  max_active: 5
   min_active: 0
+  moderate_active: 1
   random_active: True # if False, only train max_active
   prob_easy: 0.05
