--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 200
 save_interval: 200
 seed: 0
 
@@ -30,20 +30,20 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: manual_cl_train0to2_loadcl
-  run_name: train0to1_easyothers
+  run_name: manual_cl_eval200_easyprob_0_0_5_softupdate
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: HideAndSeek_circle_static_UED_addeasy
-  # - task: HideAndSeek_circle_static_UED_cl
+  # - task: HideAndSeek_circle_static_UED_addeasy
+  - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_eval
