--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 50
 save_interval: 200
 seed: 0
 
@@ -30,7 +30,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: hardupdate_v_3_loadv_1_3
+  run_name: softupdate_loadv_1_3
   # run_name: debug
   job_type: train
   entity: chenjy
