--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/hardupdate_v_2_loadcl/03-18_10-37/wandb/run-20240318_103711-gw0tjilu/files/checkpoint_498204672.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_hard_update_0and1_done.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_wo_validation_final/seed0/catch0_15_v_2_0.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -12,26 +12,26 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 50
+eval_interval: 100
 save_interval: 200
 seed: 0
 
 viewer:
   resolution: [960, 720]
-  # # up
-  # eye: [0.001, 0.0, 6.]
-  # lookat: [0., 0., 2.]
+  # up
+  eye: [0.001, 0.0, 6.]
+  lookat: [0., 0., 2.]
   # # debug
   # eye: [0., -4., 4.]
   # lookat: [0., 0., 1.]
-  # front
-  eye: [4., 0., 4.]
-  lookat: [0., 0., 1.]
+  # # front
+  # eye: [4., 0., 4.]
+  # lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: softupdate_loadv_1_3
-  # run_name: debug
+  # run_name: softupdate_maxweight_2_loadv_1_3
+  run_name: 7_c_DR
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -42,10 +42,10 @@ wandb:
   tags: 
 
 defaults:
-  - task: HideAndSeek_circle_static_UED_addeasy
+  # - task: HideAndSeek_circle_static_UED_addeasy
   # - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
-  # - task: HideAndSeek_circle_eval
+  - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
