--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/hardupdate_v_2_loadcl/03-18_10-37/wandb/run-20240318_103711-gw0tjilu/files/checkpoint_498204672.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_wo_validation_final/seed0/catch0_15_v_2_0.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/DR_wo_validation_final/seed0/catch0_15_v_2_0.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -30,8 +30,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: evalupdate_p0_0_2_alpha5_loadv_1_3
-  run_name: 6_c
+  run_name: evalupdate_p0_0_2_alpha5_loadv_1_3
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -42,10 +42,10 @@ wandb:
   tags: 
 
 defaults:
-  # - task: HideAndSeek_circle_static_UED_addeasy
+  - task: HideAndSeek_circle_static_UED_addeasy
   # - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
-  - task: HideAndSeek_circle_eval
+  # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
