--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder.yaml
@@ -1,13 +1,12 @@
-name: HideAndSeek_circle_eval
+name: HideAndSeek_circle_static_UED_large_cylinder
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
   - /base/env_base@_here_
   - /base/sim_base@_here_
-  - /base/randomization_base@_here_
 
 env:
-  num_envs: 1000
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -17,29 +16,33 @@ time_encoding: true
 # action_transform: multidiscrete:4
 action_transform: rate
 
-# evalution scenario
-evaluation_flag: '5_cross' # '3_cylineder_line', '5_cross', '6_c', '6_cross', '7_c_1', '8_random'
+# inner cl
+use_inner_cl: 0
+capture_threshold: 0.98
 
+# use rejection sampling validation
 use_validation: 1
+
+# evalution scenario
+evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
 
 # exp
 num_agents: 4
 detect_range: -1.0 # -1.0 means fully-observable
 
-arena_size: 1.0
+arena_size: 1.2
 v_drone: 1.0
-v_prey: 1.5
+v_prey: 1.3
 
-fixed_config: False # if True, only eval max_config
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.15
+catch_radius: 0.5
 collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
-  size: 0.2
-  num: 8
-  max_active: 5
+  size: 0.4
+  num: 5
+  max_active: 3
   min_active: 0
-  random_active: False # if False, only train max_active
+  random_active: True # if False, only train max_active
