--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,7 +1,7 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/hardupdate_v_2_loadcl/03-18_10-37/wandb/run-20240318_103711-gw0tjilu/files/checkpoint_498204672.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/cl_v1_5.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3.pt
+# model_dir: null
 
 # hydra.job.chdir: false
 
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 200
 seed: 0
 
@@ -25,12 +25,12 @@ viewer:
   # eye: [0., -4., 4.]
   # lookat: [0., 0., 1.]
   # front
-  eye: [0., 4., 4.]
+  eye: [0., -4., 4.]
   lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: DR_validation_random3_v1_3_catch0_5
+  run_name: fixed1_v1_3_catch0_2_large_loadcatch0_3
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -47,6 +47,7 @@ defaults:
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
   - task: HideAndSeek_circle_static_UED_large_cylinder
+  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
