--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/hardupdate_v_2_loadcl/03-18_10-37/wandb/run-20240318_103711-gw0tjilu/files/checkpoint_498204672.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_v2_large_catch0_2_v1_3.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 200
 seed: 0
 
@@ -30,8 +30,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixed1_v1_3_catch0_2_large_cl_lower0_6_higher0_9_random0_loadcatch0_3
-  # run_name: debug
+  # run_name: fixed1_v1_3_catch0_2_large_cl_lower0_9_higher1_1_random0_0_loadcatch0_3
+  run_name: random_eval_cylinder1
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -46,8 +46,8 @@ defaults:
   # - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
-  # - task: HideAndSeek_circle_static_UED_large_cylinder
-  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  - task: HideAndSeek_circle_static_UED_large_cylinder
+  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
