--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_v2_large_catch0_2_v1_3.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3.pt
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -30,8 +30,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: fixed1_v1_3_catch0_2_large_cl_lower0_9_higher1_1_random0_0_loadcatch0_3
-  run_name: large_fixed1_v1_3_catch0_2_loadrandom3
+  # run_name: debug
+  run_name: large_fixed1_v1_3_catch0_2_0_9to1_1_random0_3_cl_loadrandom3
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -46,8 +46,8 @@ defaults:
   # - task: HideAndSeek_circle_static_UED_cl
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
-  - task: HideAndSeek_circle_static_UED_large_cylinder
-  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  # - task: HideAndSeek_circle_static_UED_large_cylinder
+  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
   - algo: mappo
   - _self_
