--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/large_fixed1_v1_3_catch0_2_1_1to1_5_random0_3_expand_cl_loadrandom3/03-25_00-01/wandb/run-20240325_000117-nndkl4v6/files/checkpoint_1258422272.pt
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3_fixed1.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_catch0_15_collision001_validation.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/random3_large_catch0_2_v_1_3_better.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -12,7 +12,7 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: 200
 save_interval: 200
 seed: 0
 
@@ -31,7 +31,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: large_random3_cl_loadrandom3
+  run_name: large_random0to3_v1_3_catch0_2_loadfixed1_manual_cl
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -47,7 +47,8 @@ defaults:
   # - task: HideAndSeek_circle_static_UED_cl_v2
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_static_UED_large_cylinder
-  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  - task: HideAndSeek_circle_static_UED_large_cylinder_cl
+  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
   # - task: HideAndSeek_circle_eval_large
   - algo: mappo
