--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder.yaml
@@ -30,7 +30,7 @@ evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_rin
 num_agents: 4
 detect_range: -1.0 # -1.0 means fully-observable
 
-arena_size: 1.2
+arena_size: 0.6 # 0.9
 v_drone: 1.0
 v_prey: 1.3
 
@@ -41,8 +41,8 @@ collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
-  size: 0.4
+  size: 0.2 # 0.3
   num: 5
-  max_active: 1
+  max_active: 3
   min_active: 0
   random_active: False # if False, only train max_active
