--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder.yaml
@@ -31,12 +31,13 @@ num_agents: 4
 detect_range: -1.0 # -1.0 means fully-observable
 
 arena_size: 0.6 # 0.9
+max_height: 0.6 # 2 * arena_size
 v_drone: 1.0
-v_prey: 2.0
+v_prey: 1.0
 
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.2
+catch_radius: 0.5
 collision_radius: 0.01
 use_dynamic: False
 
