--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -33,7 +33,8 @@ evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_rin
 num_agents: 4
 detect_range: -1.0 # -1.0 means fully-observable
 
-arena_size: 1.2
+arena_size: 0.9
+max_height: 1.8 # 2 * arena_size
 v_drone: 1.0
 v_prey: 1.3
 
@@ -44,8 +45,8 @@ collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
-  size: 0.4
+  size: 0.3
   num: 5
   max_active: 3
   min_active: 0
-  random_active: True # if False, only train max_active
+  random_active: False # if False, only train max_active
